Fix overflow for issues from issue tracking feature

--- a/amundsen_application/static/js/components/TableDetail/TableIssues/styles.scss
+++ b/amundsen_application/static/js/components/TableDetail/TableIssues/styles.scss
@@ -21,7 +21,7 @@
     margin: 0px 5px 0px 0px; 
   }
   .issue-title-name {
-    max-width: 390px; 
+    max-width: 353px; 
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
